force-app/main/default/objects/vlocity_cmt__Cart__c/vlocity_cmt__Cart__c.object-meta.xml
<CustomObject>
    <description>An abandoned shopping cart tracked for a lead, account or contact. Used to pursue follow-up actions with the suspect, prospect or customer.</description>
    <label>Cart</label>
    <nameField>
        <label>Cart Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>