force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the account that identifies the customer for the cart.</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cart</relationshipLabel>
    <relationshipName>Cart</relationshipName>
    <type>Lookup</type>
</CustomField>