force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__CartCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CartCreatedDate__c</fullName>
    <description>Date and time when this cart was first created in the source system.</description>
    <label>Cart Created</label>
    <type>DateTime</type>
</CustomField>