force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__CartLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CartLastModifiedDate__c</fullName>
    <description>Date and time when this cart was last modified in the source system.</description>
    <label>Cart Last Modified</label>
    <type>DateTime</type>
</CustomField>