force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__CheckoutCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CheckoutCompletedDate__c</fullName>
    <description>Date and time when checkout for this cart was completed.</description>
    <label>Checkout Completed</label>
    <type>DateTime</type>
</CustomField>