force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the contact who is (or was) the shopper on this cart.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cart</relationshipLabel>
    <relationshipName>Cart</relationshipName>
    <type>Lookup</type>
</CustomField>