force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__LeadId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the lead for which the cart has been captured.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cart</relationshipLabel>
    <relationshipName>Cart</relationshipName>
    <type>Lookup</type>
</CustomField>