force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__ProgressPercentage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ProgressPercentage__c</fullName>
    <description>An estimated percentage completion through the shopping and check-out process for this cart.</description>
    <label>Progress</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>