force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__ShopperIpAddress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ShopperIpAddress__c</fullName>
    <description>IP address of the shopper for this cart.</description>
    <label>Shopper IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>