force-app/main/default/objects/vlocity_cmt__Cart__c/fields/vlocity_cmt__SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SourceSystem__c</fullName>
    <description>The name of the source system that captured the cart.</description>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>